fix: Resolve 'cannot find symbol' error in Engine class